<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uclv_custom_action_cpp</name>
  <version>1.0.0</version>
  <description>ROS2 cpp custom action demo</description>
  <maintainer email="marco.costanzo@unicampania.it">Marco Costanzo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- This section should list all the dependencies -->
  <depend>rclcpp</depend>
  <depend>uclv_custom_action_interfaces</depend>
  <depend>rclcpp_action</depend>
  <!-- ........................................... -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
