<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uclv_ros2_demo_interfaces</name>
  <version>1.0.0</version>
  <description>Custom Interfaces for ROS2</description>
  <maintainer email="marco.costanzo@unicampania.it">Marco Costanzo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Remember to list all the dependencies of your custom msgs -->
  <depend>geometry_msgs</depend>

  <!-- ****************************************************************** -->
  <!-- IN ORDER TO GENERATE MSG, SRV, and, ACTIONS YOU NEED THE FOLLOWING -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <!-- ****************************************************************** -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
